# Bachelor-project

./: Braitenberg.cpp  Braitenberg.h  CMakeLists.txt  README.md  Straight_test.txt  Test.cpp  Untitled Diagram.drawio  blob.h  camera.cpp  camera.h  client  client.cpp  client.h  controller.cpp  controller.h  follower.cpp  follower.h  include.h  leader.cpp  leader.h  main.cpp  maintestclient.cpp  maintestserver.cpp  server  server.cpp  server.h  utils.h
Controllerv1/: CMakeLists.txt  main.cpp
Geogebra/Straight/Robot_follower/: geogebra_0.0.ggb  geogebra_0.025_minus.ggb  geogebra_0.025_plus.ggb  geogebra_0.05.ggb  geogebra_0.1.ggb  geogebra_0.5.ggb  geogebra_1.0.ggb
Geogebra/Straight/Robot_leader/: 08_0,01.ggb  08_0,05.ggb  08_0,1.ggb  08_0,5.ggb  08_0.005.ggb
Geogebra/Turn/Robot_follower/: turn 3380.ggb  turn3480.ggb  turn3580.ggb  turn3680.ggb  turn3780.ggb
Geogebra/Turn/Robot_leader/: turn358008.ggb  turn363008.ggb  turn368008.ggb
Tracker/Braitenberg/Robot_follower/: tracker_0,1center_trim.trk  tracker_0,2center_trim.trk  tracker_0,3center_trim.trk  tracker_0,4center_trim.trk  tracker_0,5center_trim.trk  tracker_0,5dist_trim.trk
Tracker/Braitenberg/Robot_leader/: tracker_08_braitenberg_0,3_0,3_trim.trk
Tracker/Straight/Robot_follower/: trackerpwm0,025.trk  trackerpwm0,025minus.trk
Tracker/Straight/Robot_leader/: tracker_08_0,005_trim.trk
Tracker/Turn/Robot_follower/: trackerturn3480trim.trk  trackerturn3580trim.trk  trackerturn3680trim.trk  trackerturn3780trim.trk
Tracker/Turn/Robot_leader/: tracker_turn358008trim.trk  tracker_turn363008trim.trk  (+1 more)
